--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>gupaoedu-vip-design</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
     <modules>
         <module>model-facotry-simple</module>
         <module>model-factory-method</module>
