--- a/pattern-prototype/pom.xml
+++ b/pattern-prototype/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>pattern-prototype</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
