整体项目维护

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
         <module>pattern-decorator</module>
         <module>pattern-flyweight</module>
         <module>pattern-composite</module>
-        <module>pattern-adpter</module>
+        <module>pattern-adapter</module>
+        <module>pattern-bridge</module>
     </modules>
 
     <dependencies>
