--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>pattern-composite</module>
         <module>pattern-adapter</module>
         <module>pattern-bridge</module>
+        <module>pattern-delegate</module>
     </modules>
 
     <dependencies>
